--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,7 +4,7 @@ repo: upptime-demo # The name of this repository
 
 sites:
   - name: EXT-API
-    url: https://ext-api.airthings.com/v1/health
+    url: https://ext-api.airthings.com/health
   - name: Google
     url: https://www.google.com
 
