--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,6 +5,8 @@ repo: upptime-demo # The name of this repository
 sites:
   - name: EXT-API
     url: https://ext-api.airthings.com/health
+  - name: MQTT-API
+    url: https://mqtt-service-api.airthings.com/health
   - name: Google
     url: https://www.google.com
 
@@ -19,7 +21,7 @@ status-website:
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: Status
-      href: /
+      href: /upptime-demo
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
 
